Version 0.4.1a
 Bugfixes:
  - Fixed Tizona typo (thanks TameFroggy!)


Version 0.4.1: It's about time
 Additions:
  - Added normal maps (for GraphicsLib) for all weapons that were lacking them (such as the Caladbolg and Perturba prototypes)
  - Added GraphicsLib light sources for all applicable weapons and effects
  - Added XP gain to certain campaign events, as appropriate
     > I don't know what reasonable XP gains is. Feedback on if these are excessively high or low is always appreciated!

 Balance:
  - Schiavona
     -- Base burn down from 10 to 9
     -- Now comes with built-in Augmented Drive Field
     > This puts the "maximum" performance of the Schiavona's speed in-line with many other destroyers while still firmly establishing it as a pursuit ship
  - Tizona/Colada Emitter:
     -- Flux/Shot down from 75 to 45
     -- Damage up from 400 to 450
     -- EMP up from 300 to 450
     > The Tizona and Colada always felt a bit enemic, especially when compared to weapons such as the Annihilator. A bigger rework may be needed, but this should work as a stop-gap
  - Estoc:
     -- Weapon EMP up from 675 to 900
         > Mostly to bring it in-line with the Tizona and Colada Damage/EMP distribution

 Bugfixes:
  - Fixed compatibility with newest version of Starsector (0.96a-RC7) and MagicLib
  - Fixed several bugs related to the early-game Perturba campaign content
  - Fixed certain campaign-unique items showing up in mission refit
     > They never *functioned* outside the campaign anyhow
  - Fixed an exploit where the Vass families sometimes did not detect massive sales of fighters, as long as no ships were sold
     > You can still avoid scrutiny the intended way: by selling them piecemeal over prolonged time
  - Fixed some typos



Version 0.4c
 Additions:
  - Added cross-mod compatibility configurations to the Isochronal Field system: see the file data/config/modSettings.json