@@ -20,13 +20,13 @@ vass_schiavona,SHIP,"As much a bragging right as a warship, the infamous Schiavo
 
 Commonly used for hunter-killer duty, the ship is extremely fast and is capable of catching almost all known vessels both in- and out of a combat scenario unprepared. Accel in particular are known to use entire small fleets consisting of nothing but Schiavonas to hunt down those who cross them, earning it the nickname 'Lain's Bloodhound' in certain circles.
 
-Of special note is its Periodic Breaker system, often considered the most defining feature of the ship. The device accelerates the ship's timeflow to near-infinite levels, creating the illusion of time standing still for everything outside its sphere of influence. A side-effect of this is an extremely loud, almost tearing sound, which expands far outside the area directly affected by the system. In fact, for reasons still not entirely documented, this sound seems to travel without carrying mediums: it can be heard aboard other vessels despite being several kilometers away with nothing but the emptiness of space inbetween.",,,
+Of special note is its Periodic Breaker system, often considered the most defining feature of the ship. The device accelerates the ship's timeflow to near-infinite levels, creating the illusion of time standing still for everything outside its sphere of influence. A side-effect of this is an extremely loud, almost tearing sound, which expands far outside the area directly affected by the system. In fact, for reasons still not entirely documented, this sound seems to travel without carrying mediums: it can be heard aboard other vessels despite being several kilometers away with nothing but the emptiness of space in-between.",,,
 ,,,,,
-vass_curtana,SHIP,"Primary carrier of the Vass families, the Curtana compensates for its comparatively low fighter count with advanced refit systems and decent front-line performance. Specializes in short, spread-out fighter strikes and fleet support, but is still capable of holding its own in a fight and is surprisingly fast for its size.
+vass_curtana,SHIP,"Primary carrier of the Vass families, the Curtana compensates for its comparatively low fighter count with advanced refit systems and decent front-line performance. Specializes in small, spread-out fighter strikes and fleet support but is still capable of holding its own in a fight and is surprisingly fast for its size.
 
-Hurriedly developed shortly after the Collapse in an attempt to reinforce Vass fleets for the heavier fighting that appeared in its wake, the Curtana was built from the ground-up with care taken to the unique position of the five families. Being constantly starved for manpower, a lot of focus was put on ensuring fighter crew safety. Rather than using several concurrently deployed fighter wings, this ship relies on a comparatively small amount of fighter bays with advanced quick-replacement fighter bays capable of keeping up the pressure without needing to have more fighters in the air at once. While the ship's interior design became fairly odd from the special requirements of this system, with a shaft stretching from its rear fighter bay all the way to the front of the ship, the reduced mass required for the smaller amount of fighter forges means the ship can keep a higher speed than most comparable carriers: a critical fact as it needs to keep up with other Vass ships to be of any use in a fleet setting. The empty shaft can also be quickly adapted to work as a 360-degree projector screen for crewmembers when the ship is not in an active warzone.
+Hurriedly developed shortly after the Collapse in an attempt to reinforce Vass fleets for the heavier fighting that appeared in its wake, the Curtana was built from the ground-up with care taken to the unique position of the five families. Being constantly starved for manpower, a lot of focus was put on ensuring fighter crew safety. Rather than using several concurrently deployed fighter wings, the ship instead relies on a comparatively small amount of fighter bays with advanced quick-replacement fighter bays capable of keeping up the pressure without needing to have more fighters in the air at once. This has the added benefit of allowing tactical withdrawals of damaged fighters without necessarily limiting the ship's overall combat presence.
 
-More recently, almost all existing Curtana have been retro-fitted with the Chrono Jump system to reduce their vulnerability to high-alpha attacks from enemy ships and bombers. While some fleet commanders complain about 'those bloody carrier technicians punting reapers up our bungholes', the overall combat effectiveness of the system has made such complaints fairly rare.",,,
+More recently, almost all existing Curtana vessels have been retro-fitted with the Multa-developed Chrono Jump system to reduce their vulnerability to high-alpha attacks from enemy ships and bombers. While some fleet commanders complain about 'those bloody carrier technicians punting reapers up our bungholes', the overall combat effectiveness of the system has made such complaints fairly rare.",,,
 ,,,,,
 vass_estoc,SHIP,"The primary bomber employed by most of the Vass families, the Estoc is an extremely fast bomber with a peculiar payload specialized for striking unprotected hull and weapons. It also features a Temporal Recall system allowing it to very quickly return to the carrier after a bombing run.
 
