@@ -2,7 +2,7 @@
   "displayName": "Defensive",
   "fluxCapacitors": 0,
   "fluxVents": 5,
-  "goalVariant": false,
+  "goalVariant": true,
   "hullId": "vass_makhaira",
   "hullMods": [
     "hardenedshieldemitter"
