@@ -2,7 +2,7 @@
   "displayName": "Threatener",
   "fluxCapacitors": 0,
   "fluxVents": 0,
-  "goalVariant": false,
+  "goalVariant": true,
   "hullId": "vass_makhaira",
   "hullMods": [
     "missleracks",
