@@ -29,6 +29,6 @@
     {
         "major":0,
         "minor":4,
-        "patch":1 # Can be a number, character or string (1, 2, a, b, "-RC2", etc)
+        "patch":"1a" # Can be a number, character or string (1, 2, a, b, "-RC2", etc)
     }
 }
